--- a/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/ManagementInterestMovieNewEdit/view/ManagementInterestMoviesViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementInterestMovie/ManagementInterestMovieNewEdit/view/ManagementInterestMoviesViewController.xib
@@ -20,12 +20,16 @@
                 <outlet property="btn_dropdown" destination="iUw-tB-lvd" id="Ssn-gz-BaJ"/>
                 <outlet property="calender" destination="Lxl-hW-OVQ" id="QEs-yo-EdT"/>
                 <outlet property="dropdown" destination="YQS-IX-HxK" id="hXM-Wq-3PN"/>
+                <outlet property="height_view_success" destination="dwc-mg-wbZ" id="HhN-py-Gxs"/>
                 <outlet property="lbl_datetime" destination="elL-H6-TTh" id="jxI-5g-Rix"/>
                 <outlet property="lbl_number" destination="PS3-9H-I6d" id="fKp-bC-3J2"/>
                 <outlet property="lbl_number_txt" destination="KYM-p0-20t" id="z0K-RW-UFI"/>
                 <outlet property="tableView" destination="mKY-Jv-ukC" id="34k-4W-r5E"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_auto_interest" destination="Tmh-6n-Qkq" id="UDf-NU-Mph"/>
+                <outlet property="view_choose_resettime" destination="FZP-lS-sR7" id="cgV-Qw-EAQ"/>
                 <outlet property="view_no_data" destination="M6l-Ae-fZk" id="0Jb-XV-Irp"/>
+                <outlet property="view_success" destination="sG5-JX-FUv" id="bh9-ht-ZJv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -60,6 +64,9 @@
                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                    <connections>
+                                        <action selector="btn_makePopToViewController:" destination="-1" eventType="touchUpInside" id="Vri-jI-hMT"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -149,9 +156,27 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mKY-Jv-ukC">
-                            <rect key="frame" x="0.0" y="231" width="393" height="468"/>
+                            <rect key="frame" x="0.0" y="271" width="393" height="428"/>
                             <color key="backgroundColor" systemColor="systemGray6Color"/>
                         </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sG5-JX-FUv">
+                            <rect key="frame" x="0.0" y="231" width="393" height="40"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ĐÃ HOÀN TẤT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GS0-QL-U8h">
+                                    <rect key="frame" x="137.66666666666666" y="8.9999999999999982" width="118" height="22.333333333333329"/>
+                                    <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="19"/>
+                                    <color key="textColor" systemColor="systemGray3Color"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="GS0-QL-U8h" firstAttribute="centerY" secondItem="sG5-JX-FUv" secondAttribute="centerY" id="S9m-Pb-uA8"/>
+                                <constraint firstItem="GS0-QL-U8h" firstAttribute="centerX" secondItem="sG5-JX-FUv" secondAttribute="centerX" id="Sub-3K-MIL"/>
+                                <constraint firstAttribute="height" constant="40" id="dwc-mg-wbZ"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qo6-nm-QZq">
                             <rect key="frame" x="0.0" y="41" width="393" height="40"/>
                             <subviews>
@@ -331,6 +356,7 @@
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="Lxl-hW-OVQ" secondAttribute="bottom" constant="450" id="0Si-C7-jCL"/>
                         <constraint firstAttribute="bottom" secondItem="Tmh-6n-Qkq" secondAttribute="bottom" id="3yQ-IN-0bN"/>
+                        <constraint firstItem="sG5-JX-FUv" firstAttribute="top" secondItem="FZP-lS-sR7" secondAttribute="bottom" id="6su-gk-gKF"/>
                         <constraint firstItem="Qo6-nm-QZq" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="70E-pK-O67"/>
                         <constraint firstItem="mKY-Jv-ukC" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="86O-Bp-d1i"/>
                         <constraint firstAttribute="trailing" secondItem="M6l-Ae-fZk" secondAttribute="trailing" id="AwY-Lo-oZ0"/>
@@ -339,13 +365,15 @@
                         <constraint firstItem="Lxl-hW-OVQ" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="FSN-wd-SY6"/>
                         <constraint firstAttribute="trailing" secondItem="Tmh-6n-Qkq" secondAttribute="trailing" id="Jme-v2-D5e"/>
                         <constraint firstItem="FZP-lS-sR7" firstAttribute="top" secondItem="Qo6-nm-QZq" secondAttribute="bottom" constant="120" id="MCT-6j-mRy"/>
+                        <constraint firstItem="sG5-JX-FUv" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="O7i-bt-nCW"/>
+                        <constraint firstItem="mKY-Jv-ukC" firstAttribute="top" secondItem="sG5-JX-FUv" secondAttribute="bottom" id="Pmz-Ee-8WR"/>
                         <constraint firstItem="Tmh-6n-Qkq" firstAttribute="top" secondItem="M6l-Ae-fZk" secondAttribute="bottom" id="Sr9-sP-tUP"/>
                         <constraint firstItem="Tmh-6n-Qkq" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="W26-Mp-Vp5"/>
                         <constraint firstAttribute="trailing" secondItem="FZP-lS-sR7" secondAttribute="trailing" id="Xti-ZV-oZy"/>
                         <constraint firstAttribute="trailing" secondItem="mKY-Jv-ukC" secondAttribute="trailing" id="a6t-x5-hws"/>
                         <constraint firstItem="SPx-yD-dav" firstAttribute="top" secondItem="kGr-2A-zOj" secondAttribute="top" id="bh9-VJ-S0Y"/>
+                        <constraint firstAttribute="trailing" secondItem="sG5-JX-FUv" secondAttribute="trailing" id="cv5-Hh-Pv6"/>
                         <constraint firstAttribute="trailing" secondItem="SPx-yD-dav" secondAttribute="trailing" id="d8d-sB-fKI"/>
-                        <constraint firstItem="mKY-Jv-ukC" firstAttribute="top" secondItem="FZP-lS-sR7" secondAttribute="bottom" id="lXI-DB-AxN"/>
                         <constraint firstItem="Lxl-hW-OVQ" firstAttribute="top" secondItem="Qo6-nm-QZq" secondAttribute="bottom" id="qMM-8a-qKA"/>
                         <constraint firstAttribute="trailing" secondItem="Lxl-hW-OVQ" secondAttribute="trailing" id="qfV-aL-Huq"/>
                         <constraint firstItem="FZP-lS-sR7" firstAttribute="leading" secondItem="kGr-2A-zOj" secondAttribute="leading" id="qfX-jF-B76"/>
