--- a/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
@@ -1,58 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="itemMovieTableViewCell" customModule="CinemaBook" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yg-Rz-uGa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="149"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h1" translatesAutoresizingMaskIntoConstraints="NO" id="VhR-Ru-NJW">
-                                <rect key="frame" x="10" y="0.0" width="150" height="149"/>
+                                <rect key="frame" x="10" y="0.0" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="YDK-yt-eD4"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ten phim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCZ-Lo-NDb">
-                                <rect key="frame" x="170" y="20" width="85" height="24"/>
+                                <rect key="frame" x="170" y="20" width="85.5" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25 thang 8 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mw2-wN-bBi">
-                                <rect key="frame" x="170" y="52" width="115" height="18"/>
+                                <rect key="frame" x="170" y="52" width="114.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 gio 30 phut1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOK-JR-xSB">
                                 <rect key="frame" x="170" y="70" width="96.5" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-menu-next" translatesAutoresizingMaskIntoConstraints="NO" id="fMe-tq-2fE">
-                                <rect key="frame" x="288" y="63.5" width="22" height="22"/>
+                                <rect key="frame" x="288" y="64" width="22" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="22" id="XRl-BQ-E8e"/>
                                     <constraint firstAttribute="height" constant="22" id="zP0-YD-zOb"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BOK-JR-xSB" firstAttribute="top" secondItem="Mw2-wN-bBi" secondAttribute="bottom" id="HJV-Fv-GwC"/>
                             <constraint firstItem="Mw2-wN-bBi" firstAttribute="leading" secondItem="XCZ-Lo-NDb" secondAttribute="leading" id="OTa-p5-Eks"/>
@@ -67,8 +73,8 @@
                             <constraint firstItem="Mw2-wN-bBi" firstAttribute="top" secondItem="XCZ-Lo-NDb" secondAttribute="bottom" constant="8" id="vUC-YU-cQz"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihr-hM-jQv">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ihr-hM-jQv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" title="Button"/>
@@ -76,22 +82,52 @@
                             <action selector="btn_makeToDetailViewController:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="o5J-TD-jCT"/>
                         </connections>
                     </button>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="lOv-5o-PxN">
+                        <rect key="frame" x="0.0" y="150" width="320" height="30"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2z-XO-VWV">
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="30"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="HUỶ BỎ">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VYp-UB-8sd">
+                                <rect key="frame" x="160" y="0.0" width="160" height="30"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="XÁC NHẬN">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="YIr-cK-daW"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
-                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" systemColor="systemGray3Color"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Ihr-hM-jQv" secondAttribute="trailing" id="FCA-Sd-pm9"/>
                     <constraint firstAttribute="trailing" secondItem="4yg-Rz-uGa" secondAttribute="trailing" id="G6f-93-3Hx"/>
                     <constraint firstItem="4yg-Rz-uGa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kc7-rN-Xfo"/>
                     <constraint firstItem="Ihr-hM-jQv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OK1-1v-HFs"/>
                     <constraint firstItem="Ihr-hM-jQv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ThT-V0-Lfl"/>
+                    <constraint firstItem="lOv-5o-PxN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UKo-8P-Z1C"/>
                     <constraint firstAttribute="bottom" secondItem="Ihr-hM-jQv" secondAttribute="bottom" id="WsK-eB-o9a"/>
-                    <constraint firstAttribute="bottom" secondItem="4yg-Rz-uGa" secondAttribute="bottom" constant="1" id="eMG-th-upS"/>
+                    <constraint firstAttribute="bottom" secondItem="4yg-Rz-uGa" secondAttribute="bottom" constant="30" id="eMG-th-upS"/>
                     <constraint firstItem="4yg-Rz-uGa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jp0-RY-YrB"/>
+                    <constraint firstAttribute="trailing" secondItem="lOv-5o-PxN" secondAttribute="trailing" id="wcm-dk-N46"/>
+                    <constraint firstItem="lOv-5o-PxN" firstAttribute="top" secondItem="4yg-Rz-uGa" secondAttribute="bottom" id="yBd-a8-Kry"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" systemColor="systemGray3Color"/>
             <connections>
+                <outlet property="height_button" destination="YIr-cK-daW" id="3ya-hO-b6p"/>
                 <outlet property="lbl_dateshow" destination="Mw2-wN-bBi" id="J7p-Vk-drb"/>
                 <outlet property="lbl_name" destination="XCZ-Lo-NDb" id="rEk-wX-Gdf"/>
                 <outlet property="lbl_timeshow" destination="BOK-JR-xSB" id="CfM-0q-Pgx"/>
@@ -103,5 +139,20 @@
     <resources>
         <image name="h1" width="144" height="180"/>
         <image name="icon-menu-next" width="18" height="18"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
