--- a/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
+++ b/CinemaBook/Scence/Booking/ListMovieShowNow/view/cell/itemMovieTableViewCell.xib
@@ -8,11 +8,6 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Roboto-Bold.ttf">
-            <string>Roboto-Bold</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,34 +19,34 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4yg-Rz-uGa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="h1" translatesAutoresizingMaskIntoConstraints="NO" id="VhR-Ru-NJW">
-                                <rect key="frame" x="10" y="0.0" width="150" height="150"/>
+                                <rect key="frame" x="10" y="0.0" width="150" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="YDK-yt-eD4"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ten phim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XCZ-Lo-NDb">
-                                <rect key="frame" x="170" y="20" width="85.5" height="24"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <rect key="frame" x="170" y="20" width="70.5" height="19.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25 thang 8 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mw2-wN-bBi">
-                                <rect key="frame" x="170" y="52" width="114.5" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="170" y="47.5" width="108" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 gio 30 phut1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOK-JR-xSB">
-                                <rect key="frame" x="170" y="70" width="96.5" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="170" y="64.5" width="91" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" systemColor="systemGrayColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-menu-next" translatesAutoresizingMaskIntoConstraints="NO" id="fMe-tq-2fE">
-                                <rect key="frame" x="288" y="64" width="22" height="22"/>
+                                <rect key="frame" x="288" y="79" width="22" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="22" id="XRl-BQ-E8e"/>
                                     <constraint firstAttribute="height" constant="22" id="zP0-YD-zOb"/>
@@ -82,56 +77,59 @@
                             <action selector="btn_makeToDetailViewController:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="o5J-TD-jCT"/>
                         </connections>
                     </button>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="lOv-5o-PxN">
-                        <rect key="frame" x="0.0" y="150" width="320" height="30"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b2z-XO-VWV">
-                                <rect key="frame" x="0.0" y="0.0" width="160" height="30"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="HUỶ BỎ">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VYp-UB-8sd">
-                                <rect key="frame" x="160" y="0.0" width="160" height="30"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="16"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="XÁC NHẬN">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
-                        </subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="axk-CG-Ydy">
+                        <rect key="frame" x="310" y="0.0" width="10" height="180"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="YIr-cK-daW"/>
+                            <constraint firstAttribute="width" constant="10" id="aah-cu-eMI"/>
                         </constraints>
-                    </stackView>
+                    </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gB6-Mk-e72">
+                        <rect key="frame" x="20" y="20" width="60" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ĐÃ HUỶ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44c-Ny-h35">
+                                <rect key="frame" x="5.5" y="7" width="49.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" systemColor="systemGray6Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                        <constraints>
+                            <constraint firstItem="44c-Ny-h35" firstAttribute="centerY" secondItem="gB6-Mk-e72" secondAttribute="centerY" id="Ew2-ov-LDa"/>
+                            <constraint firstAttribute="height" constant="30" id="JsW-ze-YWI"/>
+                            <constraint firstAttribute="width" constant="60" id="WzT-7t-hjS"/>
+                            <constraint firstItem="44c-Ny-h35" firstAttribute="centerX" secondItem="gB6-Mk-e72" secondAttribute="centerX" id="h4B-6N-c2P"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemGray3Color"/>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Ihr-hM-jQv" secondAttribute="bottom" id="3aw-kD-cYe"/>
                     <constraint firstAttribute="trailing" secondItem="Ihr-hM-jQv" secondAttribute="trailing" id="FCA-Sd-pm9"/>
                     <constraint firstAttribute="trailing" secondItem="4yg-Rz-uGa" secondAttribute="trailing" id="G6f-93-3Hx"/>
                     <constraint firstItem="4yg-Rz-uGa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Kc7-rN-Xfo"/>
                     <constraint firstItem="Ihr-hM-jQv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="OK1-1v-HFs"/>
                     <constraint firstItem="Ihr-hM-jQv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ThT-V0-Lfl"/>
-                    <constraint firstItem="lOv-5o-PxN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="UKo-8P-Z1C"/>
                     <constraint firstAttribute="bottom" secondItem="Ihr-hM-jQv" secondAttribute="bottom" id="WsK-eB-o9a"/>
-                    <constraint firstAttribute="bottom" secondItem="4yg-Rz-uGa" secondAttribute="bottom" constant="30" id="eMG-th-upS"/>
+                    <constraint firstItem="gB6-Mk-e72" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="avS-GR-dIa"/>
+                    <constraint firstAttribute="bottom" secondItem="axk-CG-Ydy" secondAttribute="bottom" id="by8-mC-FUb"/>
+                    <constraint firstItem="gB6-Mk-e72" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="dv5-cf-68X"/>
                     <constraint firstItem="4yg-Rz-uGa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jp0-RY-YrB"/>
-                    <constraint firstAttribute="trailing" secondItem="lOv-5o-PxN" secondAttribute="trailing" id="wcm-dk-N46"/>
-                    <constraint firstItem="lOv-5o-PxN" firstAttribute="top" secondItem="4yg-Rz-uGa" secondAttribute="bottom" id="yBd-a8-Kry"/>
+                    <constraint firstAttribute="trailing" secondItem="axk-CG-Ydy" secondAttribute="trailing" id="pO8-WL-QOY"/>
+                    <constraint firstItem="axk-CG-Ydy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="sXC-7N-F5q"/>
+                    <constraint firstAttribute="bottom" secondItem="4yg-Rz-uGa" secondAttribute="bottom" id="zrU-Ya-eU1"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" systemColor="systemGray3Color"/>
             <connections>
-                <outlet property="height_button" destination="YIr-cK-daW" id="3ya-hO-b6p"/>
                 <outlet property="lbl_dateshow" destination="Mw2-wN-bBi" id="J7p-Vk-drb"/>
                 <outlet property="lbl_name" destination="XCZ-Lo-NDb" id="rEk-wX-Gdf"/>
                 <outlet property="lbl_timeshow" destination="BOK-JR-xSB" id="CfM-0q-Pgx"/>
                 <outlet property="poster" destination="VhR-Ru-NJW" id="Aqg-jT-ahy"/>
+                <outlet property="view_cancel" destination="gB6-Mk-e72" id="lNC-wp-0mU"/>
+                <outlet property="view_trallsing_edit" destination="axk-CG-Ydy" id="kKT-f1-PiM"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="88.392857142857139"/>
         </tableViewCell>
@@ -145,14 +143,14 @@
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
